--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ baseurl: "/myblog"         # for example, '/blog' if your blog hosted on 'host/b
 RSS: false
 #weibo_username:     fairyilys
 #zhihu_username:     fairy
-#github_username:    fairyly
+github_username:    fairyly
 #twitter_username:  huxpro
-facebook_username:  fairyly
+#facebook_username:  fairyly
 
 
 
