--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ baseurl: "/myblog"         # for example, '/blog' if your blog hosted on 'host/b
 
 # SNS settings
 RSS: false
-#weibo_username:     fairyilys
-#zhihu_username:     fairy
+weibo_username:     fairyilys
+zhihu_username:     fairy
 github_username:    fairyly
 #twitter_username:  huxpro
 #facebook_username:  fairyly
