--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ weibo_username:     fairyilys
 zhihu_username:     fairy
 github_username:    fairyly
 #twitter_username:  huxpro
-#facebook_username:  fairyly
+facebook_username:  fairyly
 
 
 
