--- a/_config.yml
+++ b/_config.yml
@@ -12,10 +12,10 @@ baseurl: "/myblog"         # for example, '/blog' if your blog hosted on 'host/b
 
 # SNS settings
 RSS: false
-#weibo_username:     fairyilys
-#zhihu_username:     fairy
-#github_username:    fairyly
-#twitter_username:  huxpro
+weibo_username:     fairyilys
+zhihu_username:     fairy
+github_username:    fairyly
+twitter_username:  fairyly
 #facebook_username:  fairyly
 
 
